[gd_scene load_steps=8 format=3 uid="uid://biqph41km6qku"]

[ext_resource type="PackedScene" uid="uid://dsyornfipknw0" path="res://vup.tscn" id="1_rel4t"]
[ext_resource type="Script" path="res://pet.gd" id="1_yjjo8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sdlto"]
size = Vector2(600, 500)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k570k"]
size = Vector2(600, 400)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x57d4"]
size = Vector2(400, 500)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7yvk"]
size = Vector2(200, 400)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h1ced"]
size = Vector2(200, 400)

[node name="Pet" type="Node2D"]
script = ExtResource("1_yjjo8")

[node name="Vup" parent="." instance=ExtResource("1_rel4t")]

[node name="TouchBody1" type="Area2D" parent="."]
position = Vector2(500, 750)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchBody1"]
shape = SubResource("RectangleShape2D_sdlto")

[node name="TouchBody2" type="Area2D" parent="."]
visible = false
position = Vector2(300, 750)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchBody2"]
shape = SubResource("RectangleShape2D_k570k")

[node name="TouchHead1" type="Area2D" parent="."]
position = Vector2(500, 250)

[node name="CollisionShape2DL" type="CollisionShape2D" parent="TouchHead1"]
position = Vector2(-200, 0)
shape = SubResource("RectangleShape2D_x57d4")

[node name="CollisionShape2DR" type="CollisionShape2D" parent="TouchHead1"]
position = Vector2(200, 0)
shape = SubResource("RectangleShape2D_x57d4")

[node name="TouchHead2" type="Area2D" parent="."]
visible = false
position = Vector2(800, 750)

[node name="CollisionShape2DL" type="CollisionShape2D" parent="TouchHead2"]
position = Vector2(-100, 0)
shape = SubResource("RectangleShape2D_t7yvk")

[node name="CollisionShape2DR" type="CollisionShape2D" parent="TouchHead2"]
position = Vector2(100, 0)
shape = SubResource("RectangleShape2D_h1ced")

[node name="DragPlot1" type="Node2D" parent="."]
position = Vector2(580, 260)

[node name="DragPlot2" type="Node2D" parent="."]
position = Vector2(460, 230)

[node name="TouchHeadTimer" type="Timer" parent="."]
one_shot = true

[node name="MouseMoveTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="input_event" from="TouchHead1" to="." method="_on_touch_head_input_event"]
[connection signal="mouse_exited" from="TouchHead1" to="." method="_on_touch_head_mouse_stop_or_exit"]
[connection signal="input_event" from="TouchHead2" to="." method="_on_touch_head_input_event"]
[connection signal="timeout" from="TouchHeadTimer" to="." method="_on_touch_head_mouse_stop_or_exit"]
[connection signal="timeout" from="MouseMoveTimer" to="." method="_on_mouse_move_timer_timeout"]
